<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wbk_yolo</name>
  <version>1.0.0</version>
  <description>Wolverbot Kickers YOLO-based vision stack for RoboCup Humanoid League</description>
  
  <maintainer email="team@wolverbotkickers.com">Wolverbot Kickers Team</maintainer>
  <license>Apache-2.0</license>
  
  <author>Wolverbot Kickers Team</author>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <!-- Optional vision_msgs dependency with graceful fallback -->
  <exec_depend>vision_msgs</exec_depend>
  
  <!-- OpenCV and computer vision -->
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  
  <!-- YOLO and machine learning -->
  <depend>python3-ultralytics</depend>
  <depend>python3-torch</depend>
  
  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
